Efectos agregados a los links

--- a/index.html
+++ b/index.html
@@ -73,15 +73,24 @@
             <p class="quien__soy">Hola! Soy <strong class="quien__soy--resaltar">Manuel
                 Antón</strong><br>Front-End Developer</p>
             <ul class="menu__lista">
-              <li class="menu__item"><a class="menu__link" href="">Github<i
-                    class="icono__enlace bi bi-arrow-up-right"></i></a></li>
-              <li class="menu__item"><a class="menu__link" href="">Linkedin<i
-                    class="icono__enlace bi bi-arrow-up-right"></i></a></li>
-              <li class="menu__item"><a class="menu__link" href="">Instagram<i
-                    class="icono__enlace bi bi-arrow-up-right"></i></a></li>
-              <li class="menu__item"><a class="menu__link" href="">Currículo<i
-                    class="icono__enlace bi bi-arrow-up-right"></i></a></li>
-            </ul>
+              <li class="menu__item">
+                <a class="menu__link" href="">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-github icono__enlace"></span>
+                </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-linkedin icono__enlace"></span>
+                </a>
+              </li>
           </div>
           <div class="col-12 col-lg-4">
             <img src="assets/img/desarrollador2.svg" alt="Imagen de perfil" class="logo__perfil">
