Efectos de las tarjetas de formacion Agregados

--- a/index.html
+++ b/index.html
@@ -208,14 +208,29 @@
         <div class="row">
           <div class=" formaciones__col col-12">
             <h1 class="formacion__titulo seccion__titulo">Formación académica</h1>
-            <ul class="formacion__lista">
-              <li class="formacion__item"><img src="" alt="" class="formacion__imagen"></li>
-              <li class="formacion__item"><img src="" alt="" class="formacion__imagen"></li>
-            </ul>
+            <div class="formaciones__conteiner">
+              <div class="formacion__item">
+                <div class="box">
+                  <img src="assets/img/universidad.svg" alt="Imagen de la UCV" class="formacion__imagen1">
+                  <h2 class="formaciones__titulo1">Ingeniería de Sistemas</h2>
+                  <h6 class="formaciones__tiempo">2021 - Actualidad</h6>
+                </div>
+              </div>
+              <div class="formacion__item">
+                <div class="box">
+                  <div class="content">
+                    <img src="assets/img/ONE.png" alt="Imagen ONE" class="formacion__imagen2">
+                    <h2 class="formaciones__titulo2">Formación Front-End</h2>
+                    <h6 class="formaciones__tiempo">2022 - Actualidad</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
+
   </main>
   <footer>
 
