Estructura HTML para los proyectos Agregado

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </header>
   <main>
     <!-- Quien Soy -->
-    <section class="descripcion">
+    <section id="quien" class="section descripcion">
       <div class="container-fluid">
         <div class="row">
           <div class="quien col-12 col-lg-8">
@@ -99,7 +99,7 @@
       </div>
     </section>
     <!-- Sobre Mi -->
-    <section id="sobreMi" class="info">
+    <section id="sobreMi" class="info section">
       <div class="container-fluid">
         <div class="row">
           <div class="sobre col-12">
@@ -116,7 +116,7 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills" class="skills">
+    <section id="skills" class="skills section">
       <div class="conteiner__skills container-fluid">
         <div class="row">
           <div class="skills__col col-12">
@@ -152,7 +152,7 @@
       </div>
     </section>
     <!-- Hobbies -->
-    <section id="hobbie" class="hobbies">
+    <section id="hobbie" class="hobbies section">
       <h1 class="hobbie__titulo seccion__titulo">Hobbies</h1>
 
       <!-- Carrusel -->
@@ -203,7 +203,7 @@
       </div>
     </section>
     <!-- Formaciones -->
-    <section id="formaciones" class="formaciones">
+    <section id="formaciones" class="formaciones section">
       <div class="container-fluid">
         <div class="row">
           <div class=" formaciones__col col-12">
@@ -228,7 +228,31 @@
         </div>
       </div>
     </section>
-
+    <section id="proyectos" class="proyectos">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="proyecto__titulo seccion__titulo">Experiencia profesional</h1>
+            <div class="proyecto__conteiner">
+              <img src="" alt="" class="proyecto__imagen">
+              <div class="proyecto__descripcion">
+                <h1 class="proyecto__titulo">Encriptador de Texto</h1>
+                <p class="proyecto__info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorem nihil ad nulla praesentium quidem beatae ipsum aliquam expedita molestiae esse maxime reiciendis enim debitis nisi culpa temporibus, molestias in!</p>
+                <div class="badges-contenedor">
+                  <span class="badge text-bg-primary">HTML</span>
+                  <span class="badge text-bg-primary">CSS</span>
+                  <span class="badge text-bg-primary">JavaScript</span>
+                </div>
+                <ul>
+                  <li><a href="">Repositorio<i class="bi bi-github icono__enlace"></i></a></li>
+                  <li><a href="">Demo<i class="bi bi-box-arrow-up-right"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
