--- a/index.html
+++ b/index.html
@@ -229,25 +229,32 @@
       </div>
     </section>
     <section id="proyectos" class="proyectos">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <h1 class="proyecto__titulo seccion__titulo">Experiencia profesional</h1>
-            <div class="proyecto__conteiner">
-              <img src="" alt="" class="proyecto__imagen">
-              <div class="proyecto__descripcion">
-                <h1 class="proyecto__titulo">Encriptador de Texto</h1>
-                <p class="proyecto__info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorem nihil ad nulla praesentium quidem beatae ipsum aliquam expedita molestiae esse maxime reiciendis enim debitis nisi culpa temporibus, molestias in!</p>
-                <div class="badges-contenedor">
-                  <span class="badge text-bg-primary">HTML</span>
-                  <span class="badge text-bg-primary">CSS</span>
-                  <span class="badge text-bg-primary">JavaScript</span>
-                </div>
-                <ul>
-                  <li><a href="">Repositorio<i class="bi bi-github icono__enlace"></i></a></li>
-                  <li><a href="">Demo<i class="bi bi-box-arrow-up-right"></i></a></li>
-                </ul>
+      <h1 class="proyectos__titulo seccion__titulo">Experiencia profesional</h1>
+      <div class="container">
+        <div class="row proyectos__row">
+          <div class="proyectos__col col-12 col-lg-7">
+            <div class="conteiner__proyecto">
+              <img src="assets/img/meac2003.github.io_Challenge1-Oracle-One_.png" alt="" class="proyecto__imagen">
+            </div>
+          </div>
+          <div class="proyectos__col col-12 col-lg-5">
+            <div class="proyecto__descripcion">
+              <h1 class="proyecto__titulo">Encriptador de Texto</h1>
+              <p class="proyecto__info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorem
+                nihil ad nulla praesentium quidem beatae ipsum aliquam expedita molestiae esse maxime reiciendis
+                enim
+                debitis nisi culpa temporibus, molestias in!</p>
+              <div class="badges-contenedor">
+                <span class="badge text-bg-primary">HTML</span>
+                <span class="badge text-bg-primary">CSS</span>
+                <span class="badge text-bg-primary">JavaScript</span>
               </div>
+              <ul class="enlace__lista">
+                <li class="enlace__item"><a href="" class="enlace__link">Repositorio<i
+                      class="bi bi-github icono__enlace"></i></a></li>
+                <li class="enlace__item"><a href="" class="enlace__link">Demo<i
+                      class="bi bi-box-arrow-up-right icono__enlace"></i></a></li>
+              </ul>
             </div>
           </div>
         </div>
