--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@500&display=swap"
-    rel="stylesheet">
+  rel="stylesheet">
 </head>
 
 <body>
@@ -228,6 +228,7 @@
         </div>
       </div>
     </section>
+    <!-- Proyectos -->
     <section id="proyectos" class="proyectos">
       <h1 class="proyectos__titulo seccion__titulo">Experiencia profesional</h1>
       <div class="container">
@@ -260,9 +261,32 @@
         </div>
       </div>
     </section>
+    <!-- Contacto -->
+    <section id="contacto" class="contacto">
+      <div class="container">
+        <div class="row">
+          <div class="contacto__col col-12 col-md-6">
+            <img src="assets/img/Screenshot_22 1.png" class="contacto__imagen">
+            <h1>Contacto</h1>
+            <p class="contacto__texto">¿Quieres contactarme?<br>
+              Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
+          </div>
+          <div class="contacto__col2 col-12 col-md-6">
+            <form class="contacto__info">
+              <input type="text" id="nombreApellido" class="input__padron" required placeholder="Nombre">
+              <input type="email" id="correoElectronico" class="input__padron" required placeholder="email@dominio.com">
+              <input type="text" id="telefono" class="input__padron input__padron--modificado" required placeholder="Asunto">
+              <textarea cols="68" rows="10" id="mensaje" class="input__padron--texta" required placeholder="Mensaje"></textarea>
+            </form>
+            <button type="button">
+              Contacto
+              <i class="fa-solid fa-paper-plane plane-icon hide"></i>
+            </button>
+          </div>
+        </div>
+    </section>
   </main>
   <footer>
-
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
