--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="quien col-12 col-lg-8">
-            <p class="quien__soy">Hola! Soy <strong class="quien__soy--resaltar">Manuel
-                Antón</strong><br>Front-End Developer</p>
+            <p class="quien__soy">Hola! Soy <span id="text" class="quien__soy--resaltar"></span><br>Front-End Developer</p>
             <ul class="menu__lista">
               <li class="menu__item">
-                <a class="menu__link" href="">
+                <a class="menu__link" href="https://github.com/MEAC2003" target="_blank" rel="noopener noreferrer">
                   <span></span>
                   <span></span>
                   <span></span>
@@ -252,9 +251,11 @@
                 <span class="badge text-bg-primary">JavaScript</span>
               </div>
               <ul class="enlace__lista">
-                <li class="enlace__item"><a href="" class="enlace__link">Repositorio<i
+                <li class="enlace__item"><a href="https://meac2003.github.io/Challenge1-Oracle-One/" target="_blank"
+                    rel="noopener noreferrer" class="enlace__link">Repositorio<i
                       class="bi bi-github icono__enlace"></i></a></li>
-                <li class="enlace__item"><a href="" class="enlace__link">Demo<i
+                <li class="enlace__item"><a href="https://meac2003.github.io/Challenge1-Oracle-One/" target="_blank"
+                    rel="noopener noreferrer" class="enlace__link">Demo<i
                       class="bi bi-box-arrow-up-right icono__enlace"></i></a></li>
               </ul>
             </div>
@@ -294,10 +295,21 @@
     </section>
   </main>
   <footer>
+    <div class="conteiner">
+      <div class="derechos__autor">&#169; Copyright 2023. Desarrollado por Manuel Enrique Antón Cisneros. </div>
+      <div class="icon__plataformas">
+        <ul>
+          <li><a href="https://github.com/MEAC2003" target="_blank" rel="noopener noreferrer"><i
+                class="bi bi-github"></i></a></li>
+          <li><a href=""><i class="bi bi-linkedin"></i></a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
   <script src="assets/js/anime.min.js"></script>
   <script src="assets/js/efectos.js">
   </script>
