--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section class="banner">
     <header>
       <!-- Barra de navegacion -->
-      <nav class="navbar navbar-expand-md navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
             aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +76,7 @@
       <section id="quien" class="section descripcion">
         <div class="container-fluid">
           <div class="row">
-            <div class="quien col-12 col-lg-8">
+            <div class="quien col-12 col-md-7">
               <h2 class="quien__soy">Hola! Soy <span id="text" class="quien__soy--resaltar"></span></h2>
               <h3 class="quien__soy">Front-End Developer</h3>
               <ul class="menu__lista">
@@ -99,7 +99,7 @@
                   </a>
                 </li>
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="quien__logo col-12 col-md-5">
               <img src="assets/img/desarrollador2.svg" alt="Imagen de perfil" class="logo__perfil">
             </div>
           </div>
