Añadido avance de responsividad para la sección, hobbies.

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                 </li>
                 <li class="skill__item"><img class="skill__imagen skill__imagen--modificado"
                     src="assets/img/bootstrap-original.png" alt="Imagen Bootstrap"> <span>Bootstrap</span> </li>
-                <li class="skill__item"><img class="skill__imagen" src="assets/img/tailwindcss.png"
+                <li class="skill__item"><img class="skill__imagen" src="assets/img/tailwindcss-plain.png"
                     alt="Imagen TailwindCSS">
                   <span>TailwindCSS</span>
                 </li>
-                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado" src="assets/img/git.png"
+                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado" src="assets/img/git-original.png"
                     alt="Imagen Git"> <span>Git</span>
                 </li>
-                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado" src="assets/img/figma.png"
+                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado" src="assets/img/figma-original.png"
                     alt="Imagen Figma"> <span>Figma</span></li>
               </ul>
             </div>
@@ -181,7 +181,7 @@
               </div>
               <div class="carousel-caption">
                 <h5 class="seccion__clara">First slide label</h5>
-                <p class="seccion__clara">Some representative placeholder content for the first slide.</p>
+                <!-- <p class="seccion__clara">Some representative placeholder content for the first slide.</p> -->
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
@@ -190,7 +190,7 @@
               </div>
               <div class="carousel-caption ">
                 <h5 class="seccion__clara">Second slide label</h5>
-                <p class="seccion__clara">Some representative placeholder content for the second slide.</p>
+                <!-- <p class="seccion__clara">Some representative placeholder content for the second slide.</p> -->
               </div>
             </div>
             <div class="carousel-item">
@@ -199,7 +199,7 @@
               </div>
               <div class="carousel-caption ">
                 <h5 class="seccion__clara">Second slide label</h5>
-                <p class="seccion__clara">Some representative placeholder content for the second slide.</p>
+                <!-- <p class="seccion__clara">Some representative placeholder content for the second slide.</p> -->
               </div>
             </div>
           </div>
