--- a/index.html
+++ b/index.html
@@ -111,13 +111,22 @@
           <div class="row">
             <div class="sobre col-12">
               <h1 class="sobre__titulo">Sobre mi</h1>
-              <p class="sobre__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit
-                velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium.
-                Suspendisse potenti. Ut semper sagittis ligula et lacinia.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
-                dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
-                semper
-                sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.
+              <p class="sobre__info">
+                ¡Hola ✌️! Mi nombre es Manuel Enrique Antón Cisneros <img class="icon__bandera"
+                  src="assets/img/peru.png" alt="Bandera de Perú"> , un estudiante de Ingeniería de Sistemas con una
+                pasión por el
+                desarrollo web, especialmente en Front End. Aunque aún no tengo experiencia laboral, he adquirido
+                habilidades en tecnologías como HTML, CSS y JavaScript, entre otros. También he creado aplicaciones web
+                responsivas y diseñadas para garantizar una buena experiencia de usuario. <br><br>
+                ⭐️ Me gusta trabajar en equipo y creo que la colaboración y la comunicación son fundamentales para
+                lograr
+                proyectos exitosos. Siempre estoy buscando maneras de mejorar mis habilidades y aprender nuevas técnicas
+                y herramientas para el desarrollo web. 🧑‍💻<br><br>
+                ✅ En mi tiempo libre, me gusta hacer deporte, escuchar música y ver películas. Estoy emocionado por las
+                oportunidades que el futuro me depare en el mundo del desarrollo web y el Front End. Si tienes algún
+                proyecto en el que pueda ayudarte o simplemente quieres saber más sobre mi trabajo, no dudes en
+                contactarme. ¡Gracias por visitar mi portafolio web!
+
               </p>
             </div>
           </div>
@@ -150,11 +159,11 @@
                     alt="Imagen TailwindCSS">
                   <span>TailwindCSS</span>
                 </li>
-                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado" src="assets/img/git-original.png"
-                    alt="Imagen Git"> <span>Git</span>
+                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado"
+                    src="assets/img/git-original.png" alt="Imagen Git"> <span>Git</span>
                 </li>
-                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado" src="assets/img/figma-original.png"
-                    alt="Imagen Figma"> <span>Figma</span></li>
+                <li class="skill__item"><img class="skill__imagen skill__imagen--modificado"
+                    src="assets/img/figma-original.png" alt="Imagen Figma"> <span>Figma</span></li>
               </ul>
             </div>
           </div>
@@ -173,33 +182,50 @@
               aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#hobbies__carrusel" data-bs-slide-to="2"
               aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#hobbies__carrusel" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#hobbies__carrusel" data-bs-slide-to="4"
+              aria-label="Slide 5"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="2000">
               <div class="contenedor__imagen">
-                <img src="assets/img/desarrollador2.svg" class="hobbie__imagen" alt="...">
+                <img src="assets/img/jugador-de-futbol.png" class="hobbie__imagen" alt="Imagen Fútbol">
               </div>
               <div class="carousel-caption">
-                <h5 class="seccion__clara">First slide label</h5>
-                <!-- <p class="seccion__clara">Some representative placeholder content for the first slide.</p> -->
+                <h5 class="seccion__clara">Fútbol</h5>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <div class="contenedor__imagen">
-                <img src="assets/img/desarrollador2.svg" class="hobbie__imagen" alt="...">
+                <img src="assets/img/hombre.png" class="hobbie__imagen" alt="Imagen música">
               </div>
               <div class="carousel-caption ">
-                <h5 class="seccion__clara">Second slide label</h5>
-                <!-- <p class="seccion__clara">Some representative placeholder content for the second slide.</p> -->
+                <h5 class="seccion__clara">Escuchar música</h5>
               </div>
             </div>
             <div class="carousel-item">
               <div class="contenedor__imagen">
-                <img src="assets/img/desarrollador2.svg" class="hobbie__imagen" alt="...">
+                <img src="assets/img/pantalla-de-television.png" class="hobbie__imagen" alt="Imagen películas">
               </div>
               <div class="carousel-caption ">
-                <h5 class="seccion__clara">Second slide label</h5>
-                <!-- <p class="seccion__clara">Some representative placeholder content for the second slide.</p> -->
+                <h5 class="seccion__clara">Ver películas</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="contenedor__imagen">
+                <img src="assets/img/jugando.png" class="hobbie__imagen" alt="Imagen videojuegos">
+              </div>
+              <div class="carousel-caption ">
+                <h5 class="seccion__clara">Jugar videojuegos</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="contenedor__imagen">
+                <img src="assets/img/digital.png" class="hobbie__imagen" alt="Imagen Dibujar">
+              </div>
+              <div class="carousel-caption ">
+                <h5 class="seccion__clara">Dibujar</h5>
               </div>
             </div>
           </div>
@@ -252,7 +278,8 @@
             <div class="proyectos__col col-12 col-lg-5">
               <div class="proyecto__descripcion">
                 <h1 class="proyecto__titulo seccion__clara">Encriptador de Texto</h1>
-                <p class="proyecto__info seccion__clara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorem
+                <p class="proyecto__info seccion__clara">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Doloribus dolorem
                   nihil ad nulla praesentium quidem beatae ipsum aliquam expedita molestiae esse maxime reiciendis
                   enim
                   debitis nisi culpa temporibus, molestias in!</p>
