Descripción del proyecto agregada al portafolio.

--- a/index.html
+++ b/index.html
@@ -279,11 +279,7 @@
             <div class="proyectos__col col-12 col-lg-5">
               <div class="proyecto__descripcion">
                 <h1 class="proyecto__titulo seccion__clara">Encriptador de Texto</h1>
-                <p class="proyecto__info seccion__clara">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Doloribus dolorem
-                  nihil ad nulla praesentium quidem beatae ipsum aliquam expedita molestiae esse maxime reiciendis
-                  enim
-                  debitis nisi culpa temporibus, molestias in!</p>
+                <p class="proyecto__info seccion__clara">Este encriptador de texto te permite proteger la privacidad y seguridad de tus mensajes mediante la encriptación de texto con algoritmos avanzados. Interfaz simple y fácil de usar. Cifra y descifra mensajes en segundos. ¡Prueba el encriptador de texto!</p>
                 <div class="badges-contenedor">
                   <span class="badge text-bg-primary">HTML</span>
                   <span class="badge text-bg-primary">CSS</span>
