Enlaces de GitHub y LinkedIn, agregados.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">
+                  <a class="menu__link" href="https://www.linkedin.com/in/manuel-enrique-anton-cisneros/" target="_blank" rel="noopener noreferrer">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -286,7 +286,7 @@
                   <span class="badge text-bg-primary">JavaScript</span>
                 </div>
                 <ul class="enlace__lista">
-                  <li class="enlace__item"><a href="https://meac2003.github.io/Challenge1-Oracle-One/" target="_blank"
+                  <li class="enlace__item"><a href="https://github.com/MEAC2003/Challenge1-Oracle-One.git" target="_blank"
                       rel="noopener noreferrer" class="enlace__link">Repositorio<i
                         class="bi bi-github icono__enlace"></i></a></li>
                   <li class="enlace__item"><a href="https://meac2003.github.io/Challenge1-Oracle-One/" target="_blank"
@@ -367,7 +367,7 @@
           <ul class="icon__lista">
             <li class="icon__item"><a class="icon__link" href="https://github.com/MEAC2003" target="_blank"
                 rel="noopener noreferrer"><i class="bi bi-github"></i></a></li>
-            <li class="icon__item"><a class="icon__link" href=""><i class="bi bi-linkedin"></i></a></li>
+            <li class="icon__item"><a class="icon__link" href="https://www.linkedin.com/in/manuel-enrique-anton-cisneros/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
