Estructura HTML para la imagen de perfil agregada. Estructura en general terminada.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="https://www.linkedin.com/in/manuel-enrique-anton-cisneros/" target="_blank" rel="noopener noreferrer">
+                  <a class="menu__link" href="https://www.linkedin.com/in/manuel-enrique-anton-cisneros/"
+                    target="_blank" rel="noopener noreferrer">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -101,7 +102,11 @@
                 </li>
             </div>
             <div class="quien__logo col-12 col-md-5">
-              <img src="assets/img/desarrollador2.svg" alt="Imagen de perfil" class="logo__perfil">
+              <div class="box__imagen">
+                <div class="conteiner__imagen">
+                <img src="assets/img/fotop.png" alt="Imagen de perfil">
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -279,15 +284,17 @@
             <div class="proyectos__col col-12 col-lg-5">
               <div class="proyecto__descripcion">
                 <h1 class="proyecto__titulo seccion__clara">Encriptador de Texto</h1>
-                <p class="proyecto__info seccion__clara">Este encriptador de texto te permite proteger la privacidad y seguridad de tus mensajes mediante la encriptación de texto con algoritmos avanzados. Interfaz simple y fácil de usar. Cifra y descifra mensajes en segundos. ¡Prueba el encriptador de texto!</p>
+                <p class="proyecto__info seccion__clara">Este encriptador de texto te permite proteger la privacidad y
+                  seguridad de tus mensajes mediante la encriptación de texto con algoritmos avanzados. Interfaz simple
+                  y fácil de usar. Cifra y descifra mensajes en segundos. ¡Prueba el encriptador de texto!</p>
                 <div class="badges-contenedor">
                   <span class="badge text-bg-primary">HTML</span>
                   <span class="badge text-bg-primary">CSS</span>
                   <span class="badge text-bg-primary">JavaScript</span>
                 </div>
                 <ul class="enlace__lista">
-                  <li class="enlace__item"><a href="https://github.com/MEAC2003/Challenge1-Oracle-One.git" target="_blank"
-                      rel="noopener noreferrer" class="enlace__link">Repositorio<i
+                  <li class="enlace__item"><a href="https://github.com/MEAC2003/Challenge1-Oracle-One.git"
+                      target="_blank" rel="noopener noreferrer" class="enlace__link">Repositorio<i
                         class="bi bi-github icono__enlace"></i></a></li>
                   <li class="enlace__item"><a href="https://meac2003.github.io/Challenge1-Oracle-One/" target="_blank"
                       rel="noopener noreferrer" class="enlace__link">Demo<i
@@ -367,7 +374,9 @@
           <ul class="icon__lista">
             <li class="icon__item"><a class="icon__link" href="https://github.com/MEAC2003" target="_blank"
                 rel="noopener noreferrer"><i class="bi bi-github"></i></a></li>
-            <li class="icon__item"><a class="icon__link" href="https://www.linkedin.com/in/manuel-enrique-anton-cisneros/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
+            <li class="icon__item"><a class="icon__link"
+                href="https://www.linkedin.com/in/manuel-enrique-anton-cisneros/" target="_blank"
+                rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
@@ -383,5 +392,4 @@
   <script src="assets/js/envio-validacion.js">
   </script>
 </body>
-
 </html>
