Alts faltantes, agregados a las imágenes

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           </div>
           <div class="row">
             <div class="contacto__col col-12 col-md-6">
-              <img src="assets/img/Screenshot_22 1.png" class="contacto__imagen">
+              <img src="assets/img/Screenshot_22 1.png" alt="Mapa" class="contacto__imagen">
               <h1>Contacto</h1>
               <p class="contacto__texto">¿Quieres contactarme?<br>
                 Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
