Tiempo de carga del botón enviar reducido.

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <textarea class="input__padron--texta" name="comments" data-pattern="^.{1,500}$"
                   title="Tu comentario no debe exceder los 500 caracteres" placeholder="Mensaje" required></textarea>
                 <div class="container__btn">
-                  <button type="submit" class="btn__Enviar">
+                  <button id="btnEnviar" type="submit" class="btn__Enviar">
                     <span class="icon">
                       <i class="fas fa-rocket"></i>
                     </span>
