--- a/index.html
+++ b/index.html
@@ -387,6 +387,8 @@
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
   <script src="assets/js/anime.min.js"></script>
+  <script src="assets/js/scrollreveal.js">
+  </script>
   <script src="assets/js/animaciones.js">
   </script>
   <script src="assets/js/envio-validacion.js">
