Animaciones del scroll modificadas.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
           </div>
         </div>
       </nav>
-
     </header>
     <main>
       <!-- Quien Soy -->
-      <section id="quien" class="section descripcion">
+      <section id="quien" class="descripcion section">
         <div class="container-fluid">
           <div class="row">
             <div class="quien col-12 col-md-7">
